@@ -1,0 +1,21 @@
+#!/usr/bin/python
+# -*- coding: UTF-8 -*-
+
+import clam
+
+print
+print "== SendFloatToInControl() method doxygen documentation ==\n"
+print clam.SendFloatToInControl.__doc__
+print "\n\n"
+
+raw_input( "Press Enter to see \'help(clam.SendFloatToInControl)\' output." ) 
+help(clam.SendFloatToInControl)
+
+print
+print "== InControl.GetName() method doxygen documentation ==\n"
+print clam.InControl.GetName.__doc__
+print "\n\n"
+
+raw_input( "Press Enter to see \'help(clam.FFT_ooura)\' output." ) 
+help(clam.FFT_ooura)
+
