@@ -23,7 +23,7 @@ from pygccxml.declarations import custom_matcher_t as c_matcher
 from pygccxml.declarations import regex_matcher_t as re_matcher
 from pygccxml.declarations.matchers import access_type_matcher_t
 
-from doxygen import doc_extractor
+from doxygen import doxygen_doc_extractor
 
 options_filename = 'options.cache'
 if not os.path.exists(options_filename):
@@ -129,8 +129,9 @@ for classname in exported_manually_file_list:
 	mb.add_registration_code( "register_%s_class();"%(classname[:-4]), tail=False )
 
 
- # Creating code creator. After this step you should not modify/customize declarations.
-mb.build_code_creator( module_name='clam' )
+# Creating code creator. After this step you should not modify/customize declarations.
+mb.build_code_creator( module_name='clam', doc_extractor=doxygen_doc_extractor() )
+
 
 #// This file has been generated by Py++ from CLAM Library include files 
 mb.code_creator.license = """/*
